--- a/.github/workflows/mtg-docker.yml
+++ b/.github/workflows/mtg-docker.yml
@@ -102,7 +102,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
 
       # 8️⃣ 构建并推送多架构镜像
       - name: Build and push Docker image
